add a new main server

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,5 +46,8 @@
         "utility": "cpp",
         "string": "cpp",
         "csignal": "cpp"
-    }
+    },
+    "githubPullRequests.ignoredPullRequestBranches": [
+        "wr"
+    ]
 }
