--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,7 +45,22 @@
         "typeinfo": "cpp",
         "utility": "cpp",
         "string": "cpp",
-        "csignal": "cpp"
+        "csignal": "cpp",
+        "cstdarg": "cpp",
+        "bit": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "algorithm": "cpp",
+        "iterator": "cpp",
+        "memory_resource": "cpp",
+        "numeric": "cpp",
+        "random": "cpp",
+        "numbers": "cpp",
+        "semaphore": "cpp",
+        "stop_token": "cpp",
+        "cinttypes": "cpp"
     },
     "githubPullRequests.ignoredPullRequestBranches": [
         "wr"
