--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,21 +3,25 @@
         {
             "type": "cppbuild",
             "label": "C/C++: g++ 生成活动文件",
-            "command": "/usr/bin/g++",
+            "command": "ls",
             "args": [
-                "-fdiagnostics-color=always",
-                "-g",
-                "${file}",
-                "${fileDirname}/source/*",
-                "-lprotobuf",
-                // "-lmysqlclient",
-                "-lpthread",
-                "-I",
-                "${fileDirname}/include/",
-                "-o",
-                "${fileDirname}/${fileBasenameNoExtension}",
                 
             ],
+            // "command": "/usr/bin/g++",
+            // "args": [
+            //     "-fdiagnostics-color=always",
+            //     "-g",
+            //     "${file}",
+            //     "${fileDirname}/source/*",
+            //     "-lprotobuf",
+            //     "-lmysqlclient",
+            //     "-lpthread",
+            //     "-I",
+            //     "${fileDirname}/include/",
+            //     "-o",
+            //     "${fileDirname}/${fileBasenameNoExtension}",
+            //     "-std=c++11"
+            // ],
             "options": {
                 "cwd": "${fileDirname}"
             },
