--- a/Server/GameServer/makefile
+++ b/Server/GameServer/makefile
@@ -1,1 +1,2 @@
-g++ -g -fdiagnostics-color=always main.cpp source/** -I./include/ -L/usr/local/lib/ -lprotobuf -lpthread -lmysqlclient -o main -std=c++11
+all:
+	g++ -g -fdiagnostics-color=always main.cpp source/** -I./include/ -L/usr/local/lib/ -lprotobuf -lpthread -lmysqlclient -o main -std=c++11
