--- a/Server/GameServer/makefile
+++ b/Server/GameServer/makefile
@@ -1,2 +1,2 @@
 all:
-	g++ -g -fdiagnostics-color=always main.cpp source/** -I./include/ -L/usr/local/lib/ -lprotobuf -lpthread -lmysqlclient -o main -std=c++11
+	g++ -fdiagnostics-color=always main.cpp source/** -I./include/ -L/usr/local/lib/ -lprotobuf -lpthread -lmysqlclient -o main -std=c++11
